a basic GUI application

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,3 +6,4 @@ javac.debug=true
 javadoc.preview=true
 jlink.strip=false
 user.properties.file=/Users/hanqi/Library/Application Support/NetBeans/19/build.properties
+work.dir=/Users/hanqi/NetBeansProjects/LabSession5
